--- a/style.css
+++ b/style.css
@@ -16,16 +16,16 @@ body{
     outline: 0;
      box-shadow: 0 0 0 0 rgb(13 110 253); 
 }
-#foodName{
+#namefood{
     outline: none;
 }
 .form-control:focus {
      box-shadow: 0 0 0 0 rgb(13 110 253);
 }
-#foodDetails li{
+#Detailsfood li{
     list-style: none;
 }
-#foodDetails h5{
+#Detailsfood h5{
     color: #3B2D64;
 }
 .orange{
@@ -35,6 +35,6 @@ body{
 .text_color{
     color:#3B2D64 !important;
 }
-#errorHandel{
+#errorpart{
     color:#ff5722;
 }
